// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expense summary with 1 expense 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Showing a total of 
      <span>
        1
      </span>
       
      expense
       totaling
       
      <span>
        $0.20
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/add_expense"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`should render expense summary with multiple expense {S} 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      Showing a total of 
      <span>
        3
      </span>
       
      expenses
       totaling
       
      <span>
        $0.20
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        to="/add_expense"
      >
        Add Expense
      </Link>
    </div>
  </div>
</div>
`;
